--- a/compose.yaml
+++ b/compose.yaml
@@ -4,7 +4,7 @@ services:
     build:
       context: ./embulk
     volumes:
-      - ./embulk:/embulk
+      - ./embulk:/app
     working_dir: /embulk
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.10.1
@@ -16,3 +16,29 @@ services:
     tty: true
     environment:
       discovery.type: single-node
+  opensearch:
+    image: opensearchproject/opensearch:2.6.0
+    container_name: opensearch-node2
+    environment:
+      - cluster.name=opensearch-cluster
+      - node.name=opensearch-node2
+      - discovery.type=single-node
+      - bootstrap.memory_lock=true
+      - "OPENSEARCH_JAVA_OPTS=-Xms512m -Xmx512m"
+      - plugins.security.disabled=true
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+      nofile:
+        soft: 65536
+        hard: 65536
+    volumes:
+      - opensearch-data1:/usr/share/opensearch/data
+    expose:
+      - 9200
+    ports:
+      - "9200:9200"
+
+volumes:
+  opensearch-data1:
