--- a/embulk/Gemfile
+++ b/embulk/Gemfile
@@ -7,5 +7,5 @@ gem 'liquid'
 gem 'msgpack'
 
 source 'https://rubygems.pkg.github.com/calorie' do
-  gem 'embulk-output-elasticsearch', '0.6.0.snapshot'
+  gem 'embulk-output-opensearch', '1.0.0'
 end
