--- a/embulk/stdout.yml
+++ b/embulk/stdout.yml
@@ -8,9 +8,8 @@ in:
     columns:
     - {name: a, type: long}
 out:
-  type: elasticsearch
+  type: opensearch
   mode: replace
   nodes:
   - {host: opensearch, port: 9200}
-  index: test3
-  bulk_actions: 10000
+  index: test
